fix: Allow the monaco function hint text to overflow the wrapper element

--- a/src/aux-server/aux-web/shared/vue-components/TagValueEditorWrapper/TagValueEditorWrapper.css
+++ b/src/aux-server/aux-web/shared/vue-components/TagValueEditorWrapper/TagValueEditorWrapper.css
@@ -3,4 +3,5 @@
     min-height: 250px;
     max-height: 80%;
     overflow-x: hidden;
+    overflow: visible;
 }
